# reasoning-nanoGPT

./: .gitignore  README.md  bench.py  main.py  model.py  pyproject.toml  sample.py  test_arc_dataset.py  test_datasets.py  train.py  train_reasoning.py  visualize.py
config/: config.yaml  config_default.yaml  config_default_refactor.yaml  config_hrm.yaml  config_smol.yaml  config_woaug.yaml  reasoning_default.yaml
data/: __init__.py  datasets.py  datautils.py  loader.py  puzzledatasets.py
data/arc_agi/: README.md  common.py  prepare.py
data/arc_agi/train/: dummy.json
data/openwebtext/: prepare.py
datasets/: datautils.py  puzzle_dataset.py
models/: __init__.py  adamw.py  hrm.py  layers.py  modelutil.py  modelutils.py  muon.py  nanochat.py  nanogpt.py  optimizer.py  scheduler.py  trm.py
src/: config.py  epochs.py  logging.py  toolkits.py  train.py  utils.py
tests/: test_arc_integration.py  test_scheduler.py
utils/: const.py  epochs.py  logger.py  toolkit.py
