[project]
name = "reasoning-nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "adam-atan2-pytorch",
  "transformers>=4.57.1",
  "tiktoken>=0.12.0",
  "tqdm>=4.67.1",
  "wandb>=0.23.0",
  "matplotlib>=3.10.7",
  "pydantic>=2.12.4",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
